package dp.factory.interfaces;

public interface Vorspeise {
    // das abstrakte Produkt "Vorspeise"
    void schnellVorbereiten();
}